objects/Circularref1__c.object
<CustomObject>
    <fields>
        <fullName>Circularref2Master__c</fullName>
        <label>Circularref2Master</label>
        <referenceTo>Circularref2__c</referenceTo>
        <relationshipLabel>Circularref1 (Circularref2Master)</relationshipLabel>
        <relationshipName>Circularref11</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Circularref2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Circularref2</label>
        <referenceTo>Circularref2__c</referenceTo>
        <relationshipLabel>Circularref1</relationshipLabel>
        <relationshipName>Circularref1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Circularref1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Circularref1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Circularref1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Circularref1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>